# snoring

./: .coverage  .env.example  .gitignore  CHANGELOG.md  README.md  diagnose_x.py  main.py  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/build_core_detection_alert_20260120/: metadata.json  plan.md
conductor/archive/detection_refinement_20260120/: index.md  metadata.json  plan.md  spec.md
conductor/archive/fritz_call_20260120/: index.md  metadata.json  plan.md  spec.md
conductor/archive/fritz_enabled_flag_20260120/: index.md  metadata.json  plan.md  spec.md
conductor/archive/improve_snore_detection_20260122/: plan.md
conductor/archive/include_metrics_alerts_20260120/: index.md  metadata.json  plan.md  spec.md
conductor/archive/line_integration_20260120/: index.md  metadata.json  plan.md  spec.md
conductor/archive/refactor_notifiers_20260122/: index.md  metadata.json  spec.md
conductor/code_styleguides/: general.md  python.md
snoring/: audio_recorder.py  audio_utils.py  cli.py  detector.py  fritz_notifier.py  line_notifier.py  telegram_notifier.py  x_notifier.py
tests/: test_audio_recorder.py  test_audio_utils.py  test_audio_utils_centroid.py  test_audio_utils_zcr.py  test_cli.py  test_cli_params.py  test_config_fritz.py  test_config_line.py  test_config_x.py  test_detector.py  test_detector_advanced.py  test_detector_integration.py  test_detector_zcr.py  test_fritz_notifier.py  test_line_notifier.py  test_main.py  test_notifier.py  test_telegram_notifier.py  test_x_notifier.py
(+48 files in other folders)
