[project]
name = "snoring"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fritzconnection>=1.14.0",
    "line-bot-sdk>=3.21.0",
    "numpy>=2.4.1",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
