[project]
name = "snoring"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fritzconnection>=1.14.0",
    "librosa>=0.11.0",
    "line-bot-sdk>=3.21.0",
    "numpy<2.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "tweepy>=4.16.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["snoring"]

[project.scripts]
snoring = "snoring.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
